Fixed rounded corners on iOS

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -50,7 +50,7 @@
   .section-content {
     @include column(10);
     @include push(1);
-    padding: 3rem 0;
+    padding: 3.5rem 0;
     .section-contact {
       padding: 2rem 0;
     }
