--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -56,6 +56,8 @@ textarea {
   padding: 0.5rem 1rem;
   font-size: 1rem;
   border: 1px solid $primary;
+  border-radius: 0;
+  -webkit-appearance: none;
 }
 
 .contact-submit {
